--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=9000
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1828
+spring.jpa.hibernate.ddl-auto=update
+
+
+logging.level.org.hibernate.SQL=Debug
+logging.level.org.hibernate.jdbc.bind=trace
 
